<resources>
    <string name="app_name">CoolPlaces</string>
    <string name="login" translatable="false">Login</string>
    <string name="signInError">Sign In Error</string>
    <string name="createUser">Create User</string>
    <string name="fieldEmpty">Complete all the fields</string>
    <string name="shortPassword">Password must be at least 6 characters</string>
    <string name="registration">Not registered yet? SIGN UP </string>
    <string name="profile">Profile </string>
    <string name="map_key" translatable="false">AIzaSyAdXIYDNLZaVpDtXyHJ1yrDVVE6fECtarA</string>
    <string name="changeInfo">Change your info account</string>
    <string name="surname">Surname</string>
    <string name="Name">Name</string>
    <string name="submit">Submit</string>
    <string name="atLeastOne">You have to fill at least one field to edit</string>
    <string name="upload">Upload</string>
    <string name="chooseImage">Choose</string>
    <string name="imageUploaded">Image Uploaded</string>
    <string name="errorImageUpload">Image not uploaded</string>
    <string name="selectAImage">Select an image to upload</string>
    <string name="addFavourite">Monument added to your favourite</string>
    <string name="yourFavorite">Your favorite monuments</string>
    <string name="logout" translatable="false">LOGOUT</string>
    <string name="completeAllField">Complete all field</string>
    <string name="emptyList">You don\'t have favorite yet!</string>
    <string name="resetPassword" translatable="false">Reset Password</string>
    <string name="passwordReset">Reset your password</string>
    <string name="insertPassword6Character">New password must have > 6 characters!</string>
    <string name="change">Change Password</string>
    <string name="oldPassword">Old Password</string>
    <string name="newPassword">New Password</string>
    <string name="removeFavorite">Removed place from your favorite</string>
    <string name="nameUpdated">Name updated</string>
    <string name="surnameUpdated">Surname Updated</string>
    <string name="noLocationAllowed">Enable location in the settings of the device</string>
    <string name="uAreHere">You are here</string>
    <string name="passwordUpdated">Password Updated</string>
    <string name="wrongPassword">Wrong old password. Please retry</string>
    <string name="insertReview">Insert your review for this monument</string>
    <string name="emptyNotAllowed">Empty review are not allowed</string>
    <string name="emptyListReview">No review yet! Write one! If you are not logged, log in to leave a comment!</string>
    <string name="reviewUploaded">Review uploaded</string>
    <string name="notSamePassword">Password must not be the same</string>
</resources>