<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AccountActivity"
    android:orientation="vertical"
    android:background="@color/white"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <Button
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_gravity="end"
            android:gravity="center"
            android:id="@+id/back"
            android:layout_marginLeft="5dp"
            android:background="@drawable/back_action"

            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:fontFamily="@font/typo_graphica"
            android:layout_marginTop="10dp"
            android:textSize="30dp"
            android:text="@string/app_name"
            android:textColor="@color/red_primary"/>

        <Button
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_gravity="end"
            android:gravity="center"
            android:id="@+id/changeInformation"
            android:layout_marginRight="5dp"
            android:background="@drawable/change_info_icons"

            />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/completeName"
            android:textSize="35dp"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:gravity="center"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/email"
            android:gravity="center"
            android:textStyle="italic"
            android:layout_marginTop="10dp"
            android:textSize="25dp"
            />

        <LinearLayout
            android:id="@+id/footer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:gravity="center">

            <Button
                android:id="@+id/logoutButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/logout"
                android:layout_gravity="center|bottom"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/yourFavorite"
                android:gravity="center_horizontal"
                android:textSize="17dp"
                android:layout_marginTop="5dp"
                android:textColor="@color/red_primary"
                android:fontFamily="@font/typo_graphica"
                />
        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="10"
                android:layout_marginTop="5dp">
                <ListView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/listview"
                    tools:listitem="@layout/list_item"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/empty"
                    android:fontFamily="@font/typo_graphica"
                    android:gravity="center_horizontal"
                    android:text="@string/emptyList"/>
        </LinearLayout>



    </LinearLayout>


</LinearLayout>