<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UploadReviewActivity">
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue_secondary">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <Button
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_gravity="end"
                android:gravity="center"
                android:id="@+id/back"
                android:layout_marginRight="5dp"
                android:background="@drawable/back_action"

                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:fontFamily="@font/typo_graphica"
                android:layout_marginTop="10dp"
                android:textSize="30dp"
                android:text="@string/app_name"
                android:textColor="@color/white"/>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/insertReview"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="8dp"
                android:gravity="center"
                android:fontFamily="@font/varela_round"
                android:textStyle="bold"
                android:textColor="@color/white"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/review_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp">

                <EditText
                    android:id="@+id/review_field"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:background="@color/white"
                    android:gravity="top"
                    android:inputType="textMultiLine"
                    android:overScrollMode="always"
                    android:padding="15dp"
                    android:scrollbarStyle="insideInset"
                    android:scrollbars="vertical" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/submit"
                android:id="@+id/submit"
                android:layout_marginTop="10dp"
                android:layout_gravity="center" />
        </LinearLayout>

    </com.google.android.material.appbar.AppBarLayout>
</LinearLayout>